fix css spacing and namespace issues

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -4,6 +4,7 @@ body > header {
 	background-color: inherit;
 	-webkit-user-select: none;
 	user-select: none;
+	margin-bottom: 0;
 
 	.container {
 		margin-bottom: -$border-width;
